fixtures/e2e/todo.txt.d/lists.d/invalid/prefill-duplicate-scalar.list
---
name: Duplicate Scalar Prefill
description: Lenient parsing — first valid `prefill due` wins; second is silently ignored
---
not done

prefill due today + 1
prefill due today + 7
